feat: API for pic_kontingen
